Removed unnecessary wrappers & got padding on rowTab. Partially solved dragHandle image not fitting to correct size, but now it stretches to 100% width which breaks aspect ratio.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -25,70 +25,80 @@ body {
     );
 }
 /* 
-- FullRow
--       rowTab
--               addRowAboveButton
--               dragHandle
--               addRowBelowButton
--       mainRow
--               rowHeader
--                       rowTitle
--                       resetDeleteContainer
--                               resetButton
--                               emptyDiv
--                               deleteButton
--               rowBody
+- rowList (contains all rowFulls)
+-       rowFull
+-             rowTab
+-                     addRowAboveButton
+-                     dragHandle
+-                     addRowBelowButton
+-             mainRow
+-                     rowHeader
+-                             rowTitle
+-                             resetDeleteContainer
+-                                     resetButton
+-                                     emptyDiv
+-                                     deleteButton
+-                     rowBody
 */
-.rowFull {
-    margin-bottom: 10px; /* Adds spacing between rows */
-    position: relative;
+#rowList {
+    /* Center */
     display: flex;
     flex-direction: column;
-    /* Center */
     align-items: center;
-    text-align: center;
-}
-.inLineWrapper {
-    position: relative;
-    display: inline-block;
-    height: var(
-        --resolution
-    ); /* Sets the height of the rows to be 1 image tall*/
 }
 
+.rowFull {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    height: var(--resolution);
+    margin-bottom: 50px; /* Adds spacing between rows */
+}
+.rowTabWrapper {
+    background: repeating-linear-gradient(
+        320deg,
+        rgba(0, 0, 0, 0),
+        rgba(255, 255, 0, 0.4) 5px
+    );
+}
 .rowTab {
-    /* Take up the full vertical space alotted by parent */
+    /* Size it to parent height and half the width and list children as column */
     height: 100%;
-    /* DELETEME: This width is temporary, in future tab's width should be determined by children's need for space */
     width: calc(var(--resolution) / 2);
+    display: flex;
+    flex-direction: column;
+
+    /* Make the tab hang off the left side of the parent */
     position: absolute;
     top: 0;
     left: 0;
     transform: translateX(-100%);
-    /* Round the top left and bottom left corners to look more like a tab */
-    border-top-left-radius: var(--radius);
-    border-bottom-left-radius: var(--radius);
-    /* Center the children */
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 5px;
 
+    /* Add padding without altering size */
+    padding: 0 5px 0 10px;
+    box-sizing: border-box;
+    gap: 10px; /* Space between buttons */
+
+    /* Round corners off left side */
+    border-radius: var(--radius) 0 0 var(--radius);
+
+    /* DELETEME: Debugging colors */
     background: repeating-linear-gradient(
         290deg,
         rgba(0, 0, 0, 0),
         rgba(0, 255, 0, 0.4) 5px
     );
+    /* TESTME: Hide overflow so the user cannot click on the rounded corners and activate the child buttons */
+    overflow: hidden;
 }
-.tabButton {
+/* .tabButton {
     background: repeating-linear-gradient(
         30deg,
         rgba(0, 0, 0, 0),
         rgba(255, 0, 127, 0.4) 5px
     );
     border: 1px solid rgba(60, 0, 20, 0.6);
-}
+} */
 
 .mainRow {
     /* Take up full vertical space allotted by parent */
@@ -128,18 +138,6 @@ body {
     flex-direction: row;
 }
 
-.addRowButton {
-    /* Make these buttons take up the same flex size */
-    flex-grow: 1;
-}
-.dragHandle {
-    /* Make this section take up the remaining space not occupied by the addrow buttons */
-    flex-grow: 100;
-    /* Center it */
-    display: flex;
-    align-items: center;
-}
-
 /* Resize all images to be uniform squares */
 .rankingImage {
     width: var(--resolution);
@@ -169,14 +167,19 @@ body {
 .resetDeleteImage {
     width: calc(var(--resolution) / 3);
 }
-.addRowButtonImage {
+
+.addRowButton {
     width: 100%;
+}
+
+.dragHandle {
+    /* Make this section take up the remaining space not occupied by the addrow buttons */
+    flex-grow: 1;
+    min-height: 0;
+    /* FIXME: This image stretched to full width of its parent rowTab, it should not do this and maintain aspect ratio instead */
 }
 
 /* TODO: Make sure rowTab's draggable section extends the full
 length available after the addRowAbove and addRowBelow buttons
 are accounted for. This way, even if the row has a ton of images
 and the row is 10 images tall, the draggable section will grow to match */
-
-/* TODO: Make sure the number of dots on the draggable section
-grows proportionally to its height size. */
